--- a/index.html
+++ b/index.html
@@ -161,50 +161,63 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">My Journey</h2>
-                    <div class="timeline-body"><p class="text-muted text-align-justify">I am a professional architect who has been involved in the industry for over 5+ years. My specialties are in the area of interior and exterior design, architecture, and arts. I am good at creative thinking and able to take responsibility and give strong logical reasoning. I will utilize my designing skills to create interactive and meaningful wireframes and designs for digital platforms. While designing I keep in mind that the design is sufficient enough to make them meaningful, unique and interactive.
+                    <div class="timeline-body"><p class="text-muted" style="text-align: justify;">I am a professional architect who has been involved in the industry for over 5+ years. My specialties are in the area of interior and exterior design, architecture, and arts. I am good at creative thinking and able to take responsibility and give strong logical reasoning. I will utilize my designing skills to create interactive and meaningful wireframes and designs for digital platforms. While designing I keep in mind that the design is sufficient enough to make them meaningful, unique and interactive.
                     </p></div>
                 </div>
                 <ul class="timeline">
+                    <!-- GOOGLE CERTIFICATION -->
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/logos/google.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Oct 2022</h4>
+                                <h4>Oct 2022 - Dec 2022</h4>
                                 <h4 class="subheading">Google UX Design Professional Certificate</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted text-align-justify">My main focus on this course was to learn about the interaction that users have with products, like websites and mobile apps in order to make these everyday interactions useful, enjoyable, and accessible.
+                            <div class="timeline-body"><p class="text-muted" style="text-align: justify;">My main focus on this course was to learn about the interaction that users have with products, like websites and mobile apps in order to make these everyday interactions useful, enjoyable, and accessible.
 
                             </p></div>
                         </div>
                     </li>
+                    <!-- FREELANCING -->
                     <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/logos/dollyModiLogo.jpeg" alt="Dolly Modi Logo" /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>2019 - Present </h4>
+                                <h4 class="subheading">Freelancer</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted" style="text-align: justify;">I am a freelancer working on UX/brand design with a passion for creating meaningful and impactful user experiences. My strength lies in combining creative concepts with technical knowledge to develop user interfaces and products that are both visually pleasing and highly functional. I have a deep understanding of user-centered design principles, user research, usability testing, interface design, prototyping, and design systems.</p></div>
+                        </div>
+                    </li>
+                    <!-- ALAP KAMDAR -->
+                    <li class="timeline">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/logos/alap kamdar.jpeg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Nov 2017 - Jul 2022 </h4>
                                 <h4 class="subheading">Senior Architect - Alap Kamdar Architects</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted text-align-justify">After gaining experience as an Intern, I tried my fortune to apply for a job in an architecture company as a junior architect. I gained many experiences there, particularly in the area of interior, and exterior design, Residences, farmhouses,  cafes, and corporate offices. Only around 1 year after my acceptance, In January 2019 I was promoted to the position of Assistant Architect of my team. In January 2021 I was again promoted by the management to become a Senior Architect.</p></div>
+                            <div class="timeline-body"><p class="text-muted" style="text-align: justify;">After gaining experience as an Intern, I tried my fortune to apply for a job in an architecture company as a junior architect. I gained many experiences there, particularly in the area of interior, and exterior design, Residences, farmhouses,  cafes, and corporate offices. Only around 1 year after my acceptance, In January 2019 I was promoted to the position of Assistant Architect of my team. In January 2021 I was again promoted by the management to become a Senior Architect.</p></div>
                         </div>
                     </li>
-                    <li>
+                    <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/logos/torarch.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Sep 2016 - Mar 2017</h4>
                                 <h4 class="subheading">Internship - Tor Arch Architect</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted text-align-justify">While continuing my post-graduate program at the university, I worked as an intern architect. My biggest contribution at that time was to a small company namely Tor-Arch Architecture firm.</p></div>
+                            <div class="timeline-body"><p class="text-muted" style="text-align: justify;">While continuing my post-graduate program at the university, I worked as an intern architect. My biggest contribution at that time was to a small company namely Tor-Arch Architecture firm.</p></div>
                         </div>
                     </li>
-                    <li class="timeline-inverted">
+                    <li class="timeline">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/logos/vda.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2011 - 2016</h4>
                                 <h4 class="subheading">Bachelors in Architecture</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted text-align-justify">In my school days I was good in designing and sketching. So I decided to make my interest a full-time career. After 5 years of stressfull education and a constant race between assignments, submissions, model creation and drafting, I earned my licence to practice architecture in India.</p></div>
+                            <div class="timeline-body"><p class="text-muted" style="text-align: justify;">In my school days I was good in designing and sketching. So I decided to make my interest a full-time career. After 5 years of stressfull education and a constant race between assignments, submissions, model creation and drafting, I earned my licence to practice architecture in India.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
