--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 1-->
+                        <!-- Portfolio item 1 Magical Artz-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioMagicalArtz">
                                 <div class="portfolio-hover">
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 2-->
+                        <!-- Portfolio item 2 Peace World-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#peaceWorld">
                                 <div class="portfolio-hover">
@@ -122,7 +122,7 @@
                     </div>
 
                     <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 3-->
+                        <!-- Portfolio item 3 Diet Choice-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#dietChoice">
                                 <div class="portfolio-hover">
@@ -137,6 +137,22 @@
                         </div>
                     </div>
                     
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <!-- Portfolio item 4 Vidhyut Urja-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#vidhyutUrja">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/vidhyutUrja/vidhyutUrja.jpeg" alt="Vidhyut Urja Logo" />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Vidhyut Urja</div>
+                                <div class="portfolio-caption-subheading text-muted">Logo and brand design in Adobe Photoshop</div>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- <div class="col-lg-4 col-sm-6 mb-4"> -->
                         <!-- Portfolio item 3 -->
                         <!-- <div class="portfolio-item"> -->
@@ -445,28 +461,34 @@
             </div>
         </div>
 
-        <!-- Portfolio item 4 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <!-- Portfolio item 4 Vidhyut Urja-->
+        <div class="portfolio-modal modal fade" id="vidhyutUrja" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <div class="modal-body">
+                                <div class="modal-body" style="color: #CA5324;">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <h2 class="text-uppercase">Vidhyut Urja</h2>
+                                    <p class="item-intro text-muted">Logo and brand design in Adobe Photoshop.</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/vidhyutUrja/Logo_VidhyutUrja.png" alt="Vidhyut Urja" />
+                                    <p style="text-align: justify;">Vidhyut Urja is an electrical shop, consultancy, and contracting service located in Goa, India. They specialize in the sale, and installation of a wide range of electrical products and taking electrical work projects for residence and corporation level, from small household appliances to larger industrial and commercial electrical systems. They are known for their commitment to quality and their customer service.</br>
+                                    </br>
+                                        I was commissioned to create a Name, branding, and logo design for Vidhyut Urja that captures the essence of their business and resonates with their customers. My Logo design was inspired by the electrical energy that is a vital part of the business. I incorporated a vibrant Orange to symbolize the power of electricity and the excitement of innovation. The logo is composed of lightning, wire, and human, which represent the electrical products and services that the company provides. The combination of the elements reflects the business’s ability to provide customers with the right solution for their electrical needs.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
-                                            Lines
+                                            Akash Patel
                                         </li>
                                         <li>
-                                            <strong>Category:</strong>
-                                            Branding
+                                            <strong>Role:</strong>
+                                            Brand designer, logo designer
+                                        </li>
+                                        <li>
+                                            <strong>Project year:</strong>
+                                            2019
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
